--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=create-drop
 
 # H2 Console Configuration (available at /h2-console)
 spring.h2.console.enabled=true
@@ -17,6 +16,13 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.pool-name=MonolitHikariCP
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.max-lifetime=1800000
+# Performance optimization properties
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
 
 # Logging Configuration
 logging.level.org.springframework.jdbc.core=DEBUG
@@ -24,22 +30,5 @@ logging.level.org.springframework.jdbc.core=DEBUG
 # Default profile
 spring.profiles.active=dev
 
-# SSH Server Configuration
-ssh.server.host=localhost
-ssh.server.port=22
-ssh.server.password=password
-
-# Thymeleaf Configuration
-spring.thymeleaf.cache=false
-spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
-
-# Static Resources Configuration
-spring.web.resources.static-locations=classpath:/static/
-spring.web.resources.cache.period=0
 
 debug=true
