--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,8 @@ logging.level.org.springframework.jdbc.core=DEBUG
 # Default profile
 spring.profiles.active=dev
 
+# SQL Initialization
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
 
 debug=true
