--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,7 @@
 
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
+        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
         <plugins>
             <!-- Kotlin Maven Plugin -->
             <plugin>
