--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <kotlin.version>2.2.0</kotlin.version>
         <spring.boot.version>3.1.4</spring.boot.version>
         <lucene.version>9.8.0</lucene.version>
-        <mina.sshd.version>2.10.0</mina.sshd.version>
+        <mina.sshd.version>2.15.0</mina.sshd.version>
         <h2.version>2.2.224</h2.version>
         <java.version>21</java.version>
         <slf4j.version>2.0.9</slf4j.version>
@@ -126,6 +126,12 @@
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
             <version>${lucene.version}</version>
         </dependency>
 
